[package]
name = "polkadot-validators"
version = "0.1.0"
authors = ["hewigovens <360470+hewigovens@users.noreply.github.com>"]
edition = "2018"

[dependencies]

hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
plot_icon = { git = "https://github.com/paritytech/polkadot-identicon-rust", branch = "main" }
